# ray_light_2d

./: Cargo.toml
assets/shaders/: vordie_denoise.wgsl  vordie_dis_field.wgsl  vordie_emiters_occs.wgsl  vordie_gi_raycast.wgsl  vordie_init.wgsl  vordie_jfa.wgsl  vordie_main.wgsl  vordie_seed.wgsl
examples/: minimal.rs
src/: lib.rs  prelude.rs
